# Lucro_Admin_

./: .coverage  .gitignore  DER Lucro_Admin.drawio  DRE Lucro_Admin.drawio  MER Lucro Admin Usuário.txt  MR Lucro Admin Usuário.txt  README.md  pyproject.toml  ruff-report.txt
data base modeling/: DER Lucro_Admin.drawio  MR Lucro Admin Usuário.txt
lucro_admin/: main.py  models.py  settings.py
lucro_admin/adapters/bling/: bling_credenciais.py  bling_pedidos.py
lucro_admin/adapters/mercado_livre/: mercado_livre_credenciais.py  mercado_livre_pedidos.py
lucro_admin/adapters/mercado_pago/: mercado_pago_get.py
lucro_admin/api/: app.py  pedidos.py  schemas.py  security.py
lucro_admin/api/routers/: auth.py  users.py
lucro_admin/core/: entities_credenciais.py  entities_pedidos.py  entities_produtos.py  marketplace.py
lucro_admin/core/imposto/: calcula_imposto.py  entities_imposto.py  regras_fiscais.py
lucro_admin/infra/: conexao_DB.py  database.py  executa_database.py  repositorio_api.py  repositorio_bling.py  repositorio_pedidos.py  repositorio_produtos.py  repositorio_produtos_pedido.py
lucro_admin/infra/http/: retry.py
lucro_admin/infra/logging/: config.py  contexto.py  filters.py
lucro_admin/infra/models/: __init__.py  base.py  item_pedido.py  item_pedido_imposto.py  marketplace.py  nota_fiscal.py  pedido.py  produto.py  situacao_pedidos_bling.py  usuario.py
lucro_admin/infra/repositorioMercadoLivre/: repositorio_mercadolivre.py
lucro_admin/services/: token_service.py
lucro_admin/services/bling/credenciais/: service_bling_credenciais.py
lucro_admin/services/bling/credenciais/tokens/providers/: bling_provider.py
lucro_admin/services/bling/pedidos/: parse_xml.py  service_bling_base_pedidos.py  service_bling_pedidos.py
lucro_admin/services/bling/pedidos/provider/: provider.py  provider_pedidos.py
lucro_admin/services/bling/produtos/: produto.py
lucro_admin/services/mercado_livre/pedidos/: service_mercadolivre_base.py  service_mercadolivre_pedidos.py
lucro_admin/services/mercado_livre/tokens/: ml_provider.py  service_mercadolivre_credenciais.py
lucro_admin/services/mercado_pago/: service_mercadopago.py  service_mercadopago_base.py
lucro_admin/services/providers/: provider.py
lucro_admin/utils/: code_state.py  cript_state.py  time.py
migrations/: env.py
migrations/versions/: 1bf36c18a0da_add_tables_item_pedido_item_pedido_.py  1c20a32e3bd5_mudando_o_tipo_do_status_do_marketplace_.py  378550726401_criando_a_tabela_de_usuários.py
tests/: conftest.py  confteste.py  test_app.py  test_auth_api.py  test_database.py  test_security.py  test_users_api.py  teste_database.py
