[project]
name = "lucro-admin"
version = "0.1.0"
description = ""
authors = [
    {name = "Otavio Santos Inacio",email = "otaviosantosinacio@gmail.com"}
]
readme = "README.md"

dependencies = [
    "taskipy (>=1.14.1,<2.0.0)",
    "pytest (>=9.0.3,<10.0.0)",
    "ruff (>=0.15.12,<0.16.0)",
    "typos (>=1.46.0,<2.0.0)",
    "requests (>=2.33.1,<3.0.0)",
    "fastapi[standard] (>=0.136.3,<0.137.0)",
    "psycopg2 (>=2.9.12,<3.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "rich (>=15.0.0,<16.0.0)",
    "sqlalchemy[asyncio] (>=2.0.51,<3.0.0)",
    "coverage (>=7.14.1,<8.0.0)",
    "pydantic-settings (>=2.14.1,<3.0.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "pydantic (>=2.13.4,<3.0.0)",
    "pwdlib[argon2] (>=0.3.0,<0.4.0)",
    "pyjwt (>=2.13.0,<3.0.0)",
    "tzdata (>=2026.2,<2027.0)",
    "aiosqlite (>=0.22.1,<0.23.0)",
    "greenlet (>=3.5.2,<4.0.0)"
]

[tool.poetry.dependencies]
python = ">=3.12, <4.0"

[tool.coverage.run]
concurrency = ["thread", "greenlet"]

[tool.ruff]
line-length = 79
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT', 'FAST']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.pytest.ini_options]
pythonpath = ['.']
addopts = ['-p', 'no:warnings']
asyncio_default_fixture_loop_scope = 'function'

[tool.taskipy.tasks]
run = 'fastapi dev lucro_admin/main.py'
pre_test = 'task lint'
test = 'pytest -s -x --cov=lucro_admin -vv'
post_test = 'coverage html'
lint = 'ruff check .; ruff check  . --diff'
format = 'ruff check . --fix ; ruff format .'


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
test = [
    "pytest-cov (>=7.1.0,<8.0.0)"
]
dev = [
    "pytest-asyncio (>=1.4.0,<2.0.0)",
    "factory-boy (>=3.3.3,<4.0.0)"
]
